# neuroai-transcribe

./: .dockerignore  .env.example  .gitignore  INSTRUCTION.md  README.md  SETUP.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  test.pt
backend/: Dockerfile  app.py  config.py  database.py  deps.py  main.py  models.py  requirements.txt  schemas.py  security.py  seed.py  sync_disk_tasks.py
backend/core/: ai_engine.py  config.py  file_manager.py  flag.py  overall_pipeline.py  pipeline.py  run_pipeline.py  split.py  stitch.py
backend/routers/: admin.py  auth.py  chunks.py  export.py  projects.py  upload.py  videos.py
backend/scripts/: migrate_to_flat_structure.py  simplified_to_tranditinal.py  test_new_structure.py  test_overall_pipeline.py  test_pipeline.py  test_short_pipeline.py
backend/services/: __init__.py  chunk_service.py  segment_reinfer.py  video_service.py
core/: Dockerfile  __init__.py  ai_engine.py  config.py  diarization_placeholders.py  file_manager.py  flag.py  main.py  overall_pipeline.py  pipeline.py  requirements.txt  run_pipeline.py  split.py  stitch.py  test_imports.py  whisper_worker.py
core/flagging/: __init__.py  flag.py
core/pipeline/: __init__.py  phase2.py
core/scripts/: transcribe.py
core/speaker_bilstm/: __init__.py  (+3 more)
docs/: DEVOPS.md  EVALUATE.md  FILEMANAGER_OPTIMIZATION.md  FLAT_STRUCTURE_MIGRATION.md  INSTRUCTION.md  LLM_COMPARE.md  METRICS.md  PIPELINE.md  PIPELINE_GOAL.md  PREPROCESS.md  PROJECT.md  SETUP.md  compare_test_vs_test1.md  result.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
scripts/: agent_repair.py  migrate_data.py  rouge_eval_baselline.py  setup_hf_models.py  sn_ratio_eval.py  transcribe.py  whisper_reinfer.py
shared/: __init__.py  file_manager.py
tests/: load_whisper.py  test_stitch.py
(+128 files in other folders)
