# 讓專案根目錄可被 pip install -e .，以便 import core
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroai-transcribe"
version = "0.1.0"
description = "NeuroAI 轉錄：編輯介面 (backend/frontend) + AI 核心 (core)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "torchcodec>=0.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core"]
