# 讓專案根目錄可被 pip install -e .，以便 import core
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroai-transcribe"
version = "0.1.0"
description = "NeuroAI 轉錄：編輯介面 (backend/frontend) + AI 核心 (core)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.9",
    "nara-wpe>=0.0.11",
    "numpy>=2.2.6",
    "openai-whisper>=20250625",
    "pandas>=2.3.3",
    "pyannote-audio>=4.0.4",
    "soundfile>=0.13.1",
    "torchcodec>=0.12.0",
    "transformers>=5.8.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core"]
